--- a/movies/src/components/Container.module.css
+++ b/movies/src/components/Container.module.css
@@ -2,16 +2,8 @@
   margin: 50px 80px 0;
   display: flex;
   justify-content: space-between;
-  align-items: center;
+  /* align-items: center; */
   flex-wrap: wrap;
 }
 
-@media(max-width: 760px) {
-  .mainContainer {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
 
-  }
-}
