--- a/movies/src/components/Container.module.css
+++ b/movies/src/components/Container.module.css
@@ -1,5 +1,7 @@
 .mainContainer {
-  margin: 50px 80px 0;
+  /* position: absolute;
+  top: 0; */
+  margin: 150px 80px 50px;
   display: flex;
   justify-content: space-between;
   /* align-items: center; */
