--- a/movies/src/components/Movie.module.css
+++ b/movies/src/components/Movie.module.css
@@ -1,5 +1,6 @@
 .movieContainer {
-  width: 33%;
+  width: 25%;
+  /* height: 300px; */
   /* border: 1px solid red; */
   border-radius: 12px;
   padding: 10px;
