--- a/movies/src/components/Navbar.module.css
+++ b/movies/src/components/Navbar.module.css
@@ -1,10 +1,14 @@
 .navbar {
   /* border: 1px solid black; */
+  width: 100%;
   padding: 30px;
   display: flex;
   justify-content: space-between;
   align-items: center;
   background-color: #B5C0D0;
+  position: fixed;
+  top: 0;
+  /* z-index: 44; */
 }
 
 .logo {
@@ -39,7 +43,7 @@ input {
   border-radius: 12px;
 }
 
-button {
+.buttons {
   height: 100%;
   width: 25%;
   border-radius: 12px;
