--- a/movies/src/components/Buttons.module.css
+++ b/movies/src/components/Buttons.module.css
@@ -16,3 +16,15 @@ gap: 2rem;
   border-radius: 8px;
   color: #fff;
 }
+
+@media(max-width : 600px) {
+  .buttonsContainer {
+    padding-top: 8px;
+  }
+
+  .button {
+    padding: 8px 16px;
+    font-size: 12px;
+    font-weight: 500;
+  }
+}
