--- a/movies/src/components/Container.module.css
+++ b/movies/src/components/Container.module.css
@@ -1,11 +1,16 @@
 .mainContainer {
-  /* position: absolute;
-  top: 0; */
-  margin: 150px 80px 50px;
+  width: 90vw;
+  margin: 10vw 5vw 0vw;
   display: flex;
   justify-content: space-between;
-  /* align-items: center; */
+  align-items: center;
   flex-wrap: wrap;
+}
+
+@media(max-width : 600px) {
+  .mainContainer {
+    margin-top: 13vh;
+  }
 }
 
 
